--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Demo version: 2017.08.13 -->
 
 <!--
 > Muaz Khan     - www.MuazKhan.com
@@ -123,6 +124,8 @@
                     <video id="peer2-to-peer1" controls></video>
                      <h2>Offerer-to-Answerer</h2>
                      <p><b>EncryptedAs:</b> <span id="peer1-encryptedAs"></span></p>
+                     <p><b>Codecs send:</b> <span id="peer1-codecsSend"></span></p>
+                     <p><b>Codecs recv:</b> <span id="peer1-codecsRecv"></span></p>
                      <p><b>Local ICE type:</b> <span id="peer1-localIceType"></span></p>
                      <p><b>Remote ICE type:</b> <span id="peer1-remoteIceType"></span></p>
                      <p><b>Local Network type:</b> <span id="peer1-localNetworkType"></span></p>
@@ -149,6 +152,8 @@
                     <video id="peer1-to-peer2" controls></video>
                      <h2>Answerer-to-Offerer</h2>
                      <p><b>EncryptedAs:</b> <span id="peer2-encryptedAs"></span></p>
+                     <p><b>Codecs send:</b> <span id="peer2-codecsSend"></span></p>
+                     <p><b>Codecs recv:</b> <span id="peer2-codecsRecv"></span></p>
                      <p><b>Local ICE type:</b> <span id="peer2-localIceType"></span></p>
                      <p><b>Remote ICE type:</b> <span id="peer2-remoteIceType"></span></p>
                      <p><b>Local Network type:</b> <span id="peer2-localNetworkType"></span></p>
@@ -212,12 +217,12 @@
 
                         if (typeof window.InstallTrigger !== 'undefined') {
                             getStats(offerer, event.streams[0].getTracks()[0], function(result) {
-                                invokeGetStats(offerer, result);
+                                previewGetStatsResult(offerer, result);
                             }, 1000);
                         }
                         else {
                             getStats(offerer, function(result) {
-                                invokeGetStats(offerer, result);
+                                previewGetStatsResult(offerer, result);
                             }, 1000);
                         }
                     };
@@ -228,6 +233,7 @@
                     };
 
                     offerer.createOffer(mediaConstraints).then(function (offer) {
+                        offer.sdp = preferVP9(offer.sdp);
                         offerer.setLocalDescription(offer).then(function() {
                             answererPeer(offer, video_stream);
                         }, function() {});
@@ -254,12 +260,12 @@
                         
                         if (typeof window.InstallTrigger !== 'undefined') {
                             getStats(answerer, event.streams[0].getTracks()[0], function(result) {
-                                invokeGetStats(answerer, result);
+                                previewGetStatsResult(answerer, result);
                             }, 1000);
                         }
                         else {
                             getStats(answerer, function(result) {
-                                invokeGetStats(answerer, result);
+                                previewGetStatsResult(answerer, result);
                             }, 1000);
                         }
                     };
@@ -271,6 +277,7 @@
 
                     answerer.setRemoteDescription(offer);
                     answerer.createAnswer(mediaConstraints).then(function (answer) {
+                        answer.sdp = preferVP9(answer.sdp);
                         answerer.setLocalDescription(answer).then(function() {
                             offerer.setRemoteDescription(answer);
                         }, function() {});                        
@@ -315,79 +322,43 @@
                         });
                     }
                 };
-                function invokeGetStats(peer, result) {
+
+                function previewGetStatsResult(peer, result) {
                         if(STOP_GETSTATS) {
                             result.nomore();
                             return;
                         }
 
-                        if (result.connectionType && result.connectionType.remote) {
-                            document.getElementById('peer' + peer.id + '-remoteIceType').innerHTML = result.connectionType.remote.candidateType;
-
-                            if (result.connectionType.remote.networkType) {
-                                document.getElementById('peer' + peer.id + '-remoteNetworkType').innerHTML = result.connectionType.remote.networkType;
-                            }
-
-                            if (result.connectionType.remote.ipAddress) {
-                                document.getElementById('peer' + peer.id + '-externalIPAddressRemote').innerHTML = result.connectionType.remote.ipAddress;
-                            }
-
-                            if(result.connectionType.remote.transport) {
-                                document.getElementById('peer' + peer.id + '-localTransport').innerHTML = result.connectionType.remote.transport;
-                            }
-                        }
+                        document.getElementById('peer' + peer.id + '-remoteIceType').innerHTML = result.connectionType.remote.candidateType.join(', ');
+                        document.getElementById('peer' + peer.id + '-remoteNetworkType').innerHTML = result.connectionType.remote.networkType.join(', ');
+                        document.getElementById('peer' + peer.id + '-externalIPAddressRemote').innerHTML = result.connectionType.remote.ipAddress.join(', ');
+                        document.getElementById('peer' + peer.id + '-localTransport').innerHTML = result.connectionType.remote.transport.join(', ');
 
                         document.getElementById('peer' + peer.id + '-systemIPAddress').innerHTML = result.connectionType.systemIpAddress;
 
-                        if (result.connectionType && result.connectionType.local) {
-                            document.getElementById('peer' + peer.id + '-localIceType').innerHTML = result.connectionType.local.candidateType;
+                        document.getElementById('peer' + peer.id + '-localIceType').innerHTML = result.connectionType.local.candidateType.join(', ');
+                        document.getElementById('peer' + peer.id + '-localNetworkType').innerHTML = result.connectionType.local.networkType.join(', ');
+                        document.getElementById('peer' + peer.id + '-externalIPAddressLocal').innerHTML = result.connectionType.local.ipAddress.join(', ');
+                        document.getElementById('peer' + peer.id + '-localTransport').innerHTML = result.connectionType.local.transport.join(', ');
 
-                            if (result.connectionType.local.networkType) {
-                                document.getElementById('peer' + peer.id + '-localNetworkType').innerHTML = result.connectionType.local.networkType;
-                            }
+                        document.getElementById('peer' + peer.id + '-encryptedAs').innerHTML = result.encryption;
 
-                            if (result.connectionType.local.ipAddress) {
-                                document.getElementById('peer' + peer.id + '-externalIPAddressLocal').innerHTML = result.connectionType.local.ipAddress;
-                            }
+                        document.getElementById('peer' + peer.id + '-audioAvailableBandwidthForSenders').innerHTML = result.audio.send.availableBandwidth;
+                        document.getElementById('peer' + peer.id + '-audioAvailableBandwidthForReceivers').innerHTML = result.audio.recv.availableBandwidth;
+                        document.getElementById('peer' + peer.id + '-videoAvailableBandwidthForSenders').innerHTML = result.video.send.availableBandwidth;
+                        document.getElementById('peer' + peer.id + '-videoAvailableBandwidthForReceivers').innerHTML = result.video.recv.availableBandwidth;
 
-                            if(result.connectionType.local.transport) {
-                                document.getElementById('peer' + peer.id + '-localTransport').innerHTML = result.connectionType.local.transport;
-                            }
-                        }
-
-                        if (result.encryption) {
-                            document.getElementById('peer' + peer.id + '-encryptedAs').innerHTML = result.encryption;
-                        }
-
-                        if(result.audio.send.availableBandwidth) {
-                            document.getElementById('peer' + peer.id + '-audioAvailableBandwidthForSenders').innerHTML = result.audio.send.availableBandwidth;
-                        }
-
-                        if(result.audio.recv.availableBandwidth) {
-                            document.getElementById('peer' + peer.id + '-audioAvailableBandwidthForReceivers').innerHTML = result.audio.recv.availableBandwidth;
-                        }
-
-                        if(result.video.send.availableBandwidth) {
-                            document.getElementById('peer' + peer.id + '-videoAvailableBandwidthForSenders').innerHTML = result.video.send.availableBandwidth;
-                        }
-
-                        if(result.video.recv.availableBandwidth) {
-                            document.getElementById('peer' + peer.id + '-videoAvailableBandwidthForReceivers').innerHTML = result.video.recv.availableBandwidth;
-                        }
-
-                        if(result.resolutions.send.width && result.resolutions.send.height) {
-                            document.getElementById('peer' + peer.id + '-videoResolutionsForSenders').innerHTML = result.resolutions.send.width + 'x' + result.resolutions.send.height;
-                        }
-
-                        if(result.resolutions.recv.width && result.resolutions.recv.height) {
-                            document.getElementById('peer' + peer.id + '-videoResolutionsForReceivers').innerHTML = result.resolutions.recv.width + 'x' + result.resolutions.recv.height;
-                        }
+                        document.getElementById('peer' + peer.id + '-videoResolutionsForSenders').innerHTML = result.resolutions.send.width + 'x' + result.resolutions.send.height;
+                        document.getElementById('peer' + peer.id + '-videoResolutionsForReceivers').innerHTML = result.resolutions.recv.width + 'x' + result.resolutions.recv.height;
 
                         document.getElementById('peer' + peer.id + '-audioVideoTracksForSenders').innerHTML = result.audio.send.tracks.length + result.video.send.tracks.length;
                         document.getElementById('peer' + peer.id + '-audioVideoTracksForReceivers').innerHTML = result.audio.recv.tracks.length + result.video.recv.tracks.length;
 
                         document.getElementById('peer' + peer.id + '-totalDataForSenders').innerHTML = bytesToSize(result.audio.bytesSent + result.video.bytesSent);
                         document.getElementById('peer' + peer.id + '-totalDataForReceivers').innerHTML = bytesToSize(result.audio.bytesReceived + result.video.bytesReceived);
+
+                        document.getElementById('peer' + peer.id + '-codecsSend').innerHTML = result.audio.send.codecs.concat(result.video.send.codecs).join(', ');
+                        document.getElementById('peer' + peer.id + '-codecsRecv').innerHTML = result.audio.recv.codecs.concat(result.video.recv.codecs).join(', ');
 
                         if (result.ended === true) {
                             result.nomore();
@@ -404,6 +375,14 @@
                     }
                     var i = parseInt(Math.floor(Math.log(bytes) / Math.log(k)), 10);
                     return (bytes / Math.pow(k, i)).toPrecision(3) + ' ' + sizes[i];
+                }
+
+                function preferVP9(sdp) {
+                    if (sdp.indexOf('SAVPF 96 98') === -1 || sdp.indexOf('VP9/90000') === -1) {
+                        return sdp;
+                    }
+
+                    return sdp.replace('SAVPF 96 98', 'SAVPF 98 96');
                 }
             </script>
 
