fixed #20 now you can "require" and "import"
const getStats = require('getstats');
import { getStats} from 'getstats';

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script>window.demoVersion = '2018.12.20';</script>
+<script>window.demoVersion = '2019.02.20';</script>
 
 <!--
 > Muaz Khan     - www.MuazKhan.com
@@ -13,7 +13,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link rel="author" type="text/html" href="https://plus.google.com/+MuazKhan">
+    <link rel="author" type="text/html" href="https://muazkhan.com">
     <meta name="author" content="Muaz Khan">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     
@@ -181,10 +181,10 @@
                         Videos
                     </td>
                     <td>
-                        <video id="peer2-to-peer1" autoplay playsinilne controls muted></video>
+                        <video id="peer2-to-peer1" autoplay playsinilne controls muted volume=0></video>
                     </td>
                     <td>
-                        <video id="peer1-to-peer2" autoplay playsinilne controls muted></video>
+                        <video id="peer1-to-peer2" autoplay playsinilne controls muted volume=0></video>
                     </td>
                 </tr>
 
