--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="Muaz Khan">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     
-    <link rel="stylesheet" href="https://cdn.webrtc-experiment.com/style.css">
+    <link rel="stylesheet" href="https://www.webrtc-experiment.com/style.css">
 
     <style>
             audio, video {
@@ -119,8 +119,8 @@
             }
     </style>
 
-    <script src="https://cdn.webrtc-experiment.com/getStats.js"></script>
-    <script src="https://cdn.webrtc-experiment.com/IceServersHandler.js"></script>
+    <script src="https://www.webrtc-experiment.com/getStats.js"></script>
+    <script src="https://www.webrtc-experiment.com/IceServersHandler.js"></script>
 
     <!-- for Edge/FF/Chrome/Opera/etc. getUserMedia support -->
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
@@ -716,7 +716,7 @@
     <script>
         window.useThisGithubPath = 'muaz-khan/getStats';
     </script>
-    <script src="https://cdn.webrtc-experiment.com/commits.js" async></script>
+    <script src="https://www.webrtc-experiment.com/commits.js" async></script>
 </body>
 
 </html>
